Fix the saving system so it only saves on end Day button click, also add separate file for attendance for that day.

--- a/noconet/src/index.css
+++ b/noconet/src/index.css
@@ -25,3 +25,9 @@ body {
   justify-content: center;
   
 }
+
+#endDayButtonDiv {
+  display: flex;
+  justify-content: center;
+  margin-top: 10%;
+}
